tests/frontend/fail/array/out_of_bounds_storage.act
contract B

constructor()

creates

  int[2] a := [1,2]


transition f(uint c)

storage

    a[c] := 4
